[project]
name = "cacheback"
version = "0.0.1"

authors = [
    { name="MB" },
]

description = """
    File system snapshotting tool that prioritizes speed and reducing redundant storage.
"""

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"

urls = [
    {Homepage = "https://github.com/m-bartlett/cacheback"},
    {Issues = "https://github.com/m-bartlett/cacheback/issues"}
]

scripts = [
    {cacheback = "cacheback.__main__:main"}
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"cacheback" = "src"}

[tool.ty.environment]
root = ["."]
python-version = "3.13"

[tool.ty.rules]
division-by-zero = "ignore"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = false

[tool.ruff.lint.pydocstyle]
convention = "google"